# ferrosonic

./: .gitignore  Cargo.toml  README.md  install.sh
src/: discord.rs  main.rs  odesli.rs
src/app/: cover_art.rs  cover_art_sync.rs  discord_sync.rs  input.rs  input_artists.rs  input_playlists.rs  input_queue.rs  input_server.rs  input_settings.rs  mod.rs  mouse.rs  mouse_artists.rs  mouse_playlists.rs  odesli_sync.rs  playback.rs  song_link.rs  state.rs
src/audio/: mpv.rs
src/config/: mod.rs
src/subsonic/: client.rs  models.rs
src/ui/: footer.rs  header.rs  layout.rs  theme.rs
src/ui/pages/: artists.rs  playlists.rs  queue.rs  settings.rs
src/ui/widgets/: cover_art.rs  mod.rs
